# jj-qfin-math

./: AGENTS.md  LICENSE  LICENSE_CC_BY.txt  README.md  pyproject.toml
docs/: package_structure.md
src/jj_qfin_math/: bsm.py  gbm.py  options.py
tests/: bsm_test.py  gbm_test.py  gmb_test.py  options_test.py
