[project]
name = "jj-qfin-math"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "ihor", email = "Ihor.Halaniuk@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["numpy>=2.4.2", "scipy>=1.17.1"]

[dependency-groups]
dev = ["pytest>=9.0.2"]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D10"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["ANN201", "PLR2004", "S101", "T201"]
"**/notebooks/*" = ["T201", "S101"]

[tool.pyright]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
addopts = "-rA -q"
log_cli = true
log_cli_level = "WARNING"
log_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
